@@ -1,3 +1,7 @@
+Sat Jun  8 22:53:45 2013  Tanaka Akira  <akr@fsij.org>
+
+	* marshal.c (r_object0): Use rb_integer_unpack.
+
 Sat Jun  8 22:18:57 2013  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (v2w): Use rb_absint_size instead of RBIGNUM_LEN.
